correct gap

--- a/css/style.css
+++ b/css/style.css
@@ -436,7 +436,7 @@ nav, .nav-menu{
 
 /* contact-me-section */
 .contact-section {
-  margin-top: 0px;
+  margin-top: 30px;
   padding: 20px;
 }
 .contact-section p {
